# MCP

./: LICENSE  METRICS.md  README.md  pyproject.toml
.claude/: settings.local.json
mcp-firewall/: .gitignore  Dockerfile  README.md  pyproject.toml
mcp-firewall/.github/workflows/: ci.yml
mcp-firewall/servers/: clean_server.py  poisoned_server.py
mcp-firewall/src/mcp_firewall/: cli.py  ml_detector.py  models.py
mcp-firewall/tests/: test_firewall.py  test_rules.py
mcp-firewall/train/: train.py
servers/: poisoned_server.py
src/mcp_firewall/: __init__.py  api.py  detector.py  firewall.py  rules.py
src/mcp_firewall/static/: index.html
tests/: test_detector.py  test_firewall.py
train/: colab_train.ipynb  mcp_synthetic.jsonl  train.py
