[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-firewall"
version = "0.1.0"
description = "MCP Tool-Response Firewall — inspects MCP tool descriptions and responses for prompt-injection / tool-poisoning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rohan Burugapalli" }]
keywords = ["mcp", "security", "prompt-injection", "tool-poisoning", "firewall", "llm-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "mcp[cli]>=1.2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/rohanbxo/mcp-firewall"
Repository = "https://github.com/rohanbxo/mcp-firewall"

[project.optional-dependencies]
# Inference-only ML stack. Heavy; only needed if you ship a trained ./model.
ml = [
    "transformers>=4.38",
    "torch>=2.2",
]
# Training stack — used offline on Colab/Kaggle, see train/train.py.
train = [
    "transformers>=4.38",
    "torch>=2.2",
    "datasets>=2.18",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
mcp-firewall = "mcp_firewall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
